5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4145/executions/1747_3089.log
== TEST (2019-05-16 11:12:38) 
-- CODE:
n = int(input("digite um numero: "))

while(n!=0)


-- ERROR:
File "XXXX", line 3
    while(n!=0)
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:46) 
-- CODE:
n = int(input("digite um numero: "))

while(n=!0)


-- ERROR:
File "XXXX", line 3
    while(n=!0)
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:12:58) 
-- CODE:
n = int(input("digite um numero: "))

while(n!=0):


-- ERROR:
File "XXXX", line 5
    
    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:14:55) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input"digite um numero: ")

print(d)
-- ERROR:
File "XXXX", line 5
    n=int(input"digite um numero: ")
                                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:15) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input("digite um numero: "))

print(d)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:15:34) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input("digite um numero: "))

print(d)
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:15:46) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input("digite um numero: "))

print(d)
-- EXECUTION TIME:
0.231749
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 11:18:18) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input("digite um numero: "))


print(d)
if(d<0):
	print("Esquerda")
elif(d==0):
	print("Inicial")
else:
	print("Direita")
-- OUTPUT:
12
Direita
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 11:18:35) 
-- CODE:
n = int(input("digite um numero: "))
d = 0
while(n!=0):
	d= d+n
	n=int(input("digite um numero: "))


print(d)
if(d<0):
	print("Esquerda")
elif(d==0):
	print("Inicial")
else:
	print("Direita")
-- EXECUTION TIME:
0.191142
-- TEST CASE 1:
---- input:
1
2
1
2
1
2
1
2
0
---- correct output:
12
Direita
---- user output:
12
Direita
-- TEST CASE 2:
---- input:
-1
-2
-3
-4
-5
-6
-7
0
---- correct output:
-28
Esquerda
---- user output:
-28
Esquerda
-- TEST CASE 3:
---- input:
10
-5
5
-10
0
---- correct output:
0
Inicial
---- user output:
0
Inicial
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
